--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
-spring:
-    h2:
+  spring:
+      h2:
         console:
-            enabled: true
-            path: /h2-console
+          enabled: true
+          path: /h2-console
 
-    datasource:
+      datasource:
         url: jdbc:h2:mem:qna;NON_KEYWORDS=USER
         username: sa
         password:
         driver-class-name: org.h2.Driver
+  server:
+    servlet:
+      session:
+        tracking-modes: cookie
